--- a/Empirical_Study.tex
+++ b/Empirical_Study.tex
@@ -4,12 +4,19 @@
 \usepackage[round]{natbib}
 \bibliographystyle{plainnat}
 
+\usepackage[table]{xcolor} %
+\usepackage{booktabs}	% Tables
+\usepackage{pdflscape}	% Landscape page
+
 \usepackage{caption}
 \usepackage{subcaption}
 \usepackage{amsfonts}
 \usepackage{setspace}
 \usepackage[spaces, hyphens]{url}
 \usepackage[colorlinks, allcolors=blue]{hyperref} 
+
+% Macros
+\newcommand{\rowspace}[1]{\renewcommand{\arraystretch}{#1}}
 
 %opening
 \title{An empirical study of the na\"ive REINFORCE algorithm for predictive maintenance of industrial machines}
@@ -45,6 +52,81 @@ gradient approaches (Peters and Schaal, 2008c,b) have allowed for faster converg
 which may be advantageous for robotics as it reduces the learning time and required
 real-world interactions.
 
+
+
+\begin{landscape}
+\begin{table*}\centering
+	\rowspace{1.3}
+	\begin{tabular}{@{}lrrrcrrrcrrrcrrr@{}} \arrayrulecolor{black!40}\toprule
+		& \multicolumn{3}{c}{REINFORCE} & \phantom{i} & \multicolumn{3}{c}{SB-3 A2C} &
+		\phantom{i} & \multicolumn{3}{c}{SB-3 DQN} & \phantom{i}& \multicolumn{3}{c}{SB-3 PPO} \\
+		\cmidrule{2-4} \cmidrule{6-8} \cmidrule{10-12} \cmidrule{14-16}
+		Model &Precision &Recall &F1 &  &Precision &Recall &F1 & &Precision &Recall &F1 & &Precision &Recall &F1\\ \midrule
+		
+		Simulated  - No noise &1 &0.7 &0.823 &  &0.487 &0.44 &0.46 & &0.067 &0.01 &0.017 & &0.457 &0.28 &0.343\\
+		Simulated  - Low NBD &0.938 &0.9 &0.918 &  &0 &0 &0 & &0.45 &0.03 &0.055 & &0.367 &0.06 &0.103\\
+		Simulated  - High NBD &0.895 &1 &0.944 &  &0.498 &0.53 &0.511 & &0.497 &0.96 &0.655 & &0.584 &0.15 &0.237\\ 
+		\midrule
+		PHM C01 SS - No noise &0.907 &0.96 &0.932 &  &0.523 &0.56 &0.538 & &0.367 &0.03 &0.055 & &0.498 &0.25 &0.332\\
+		PHM C01 SS - Low NBD &0.886 &0.8 &0.836 &  &0.38 &0.13 &0.192 & &0.4 &0.02 &0.038 & &0.463 &0.14 &0.207\\
+		PHM C01 SS - High NBD &0.783 &0.93 &0.849 &  &0 &0 &0 & &0.508 &0.96 &0.664 & &0.519 &0.21 &0.287\\
+		\midrule
+		PHM C04 SS - No noise &0.821 &0.96 &0.885 &  &0.513 &0.09 &0.149 & &0.497 &0.97 &0.657 & &0.489 &0.47 &0.478\\
+		PHM C04 SS - Low NBD &0.739 &0.99 &0.846 &  &0.474 &0.51 &0.487 & &0.706 &0.72 &0.712 & &0.532 &0.28 &0.366\\
+		PHM C04 SS - High NBD &0.671 &0.78 &0.72 &  &0.522 &0.55 &0.534 & &0.5 &0.98 &0.662 & &0.472 &0.25 &0.325\\
+		\midrule
+		PHM C06 SS - No noise &1 &0.65 &0.785 &  &0.465 &0.46 &0.461 & &0.511 &0.98 &0.671 & &0.379 &0.14 &0.198\\
+		PHM C06 SS - Low NBD &0.978 &0.84 &0.902 &  &0.493 &0.53 &0.508 & &0.951 &0.58 &0.72 & &0.5 &0.38 &0.432\\
+		PHM C06 SS - High NBD &0.715 &0.88 &0.789 &  &0.505 &0.47 &0.482 & &0.505 &0.98 &0.667 & &0.369 &0.11 &0.169\\
+		\midrule
+		PHM C01 MS - No noise &0.798 &0.92 &0.852 &  &0.514 &0.59 &0.549 & &0.584 &0.97 &0.729 & &0.486 &0.24 &0.313\\
+		PHM C04 MS - No noise &0.774 &0.69 &0.728 &  &0.476 &0.53 &0.5 & &0.506 &0.97 &0.664 & &0.495 &0.34 &0.401\\
+		PHM C06 MS - No noise &1 &0.57 &0.725 &  &0.491 &0.6 &0.536 & &0.492 &0.96 &0.651 & &0.446 &0.48 &0.46\\
+		
+	\bottomrule
+\end{tabular}
+\caption{Model performance comparison. SB-3 algorithms trained for 10K episodes.}
+\end{table*}
+\end{landscape}
+
+
+
+\begin{table*}[hbt!]\centering
+	\rowspace{1.3}
+	\begin{tabular}{@{}l rr c rr c rr@{}}
+		\arrayrulecolor{black!40}\toprule
+		 & \multicolumn{2}{c}{Precision} & \phantom{i} & \multicolumn{2}{c}{Recall} & \phantom{i} & \multicolumn{2}{c}{F1-score} \\
+		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} 
+		%Model &Precision &Recall &F1 &  &Precision &Recall &F1 & &Precision &Recall &F1 & &Precision &Recall &F1\\ \midrule
+		
+		&Mean &SD & &Mean &SD & &Mean &SD \\ \midrule
+		A2C &0.000 &0.000 & &0.000 &0.000 & &0.000 &0.000 \\
+		DQN &0.000 &0.000 & &0.000 &0.000 & &0.000 &0.000 \\
+		PPO &0.000 &0.000 & &0.000 &0.000 & &0.000 &0.000 \\
+		REINFORCE &0.000 &0.000 & &0.000 &0.000 & &0.000 &0.000 \\
+		
+		\bottomrule
+\end{tabular}
+\caption{Model performance comparison.}
+\end{table*}
+
+\begin{table*}[hbt!]\centering
+	\rowspace{1.3}
+	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
+		\arrayrulecolor{black!40}\toprule
+		& \multicolumn{2}{c}{Precision} & \phantom{i} & \multicolumn{2}{c}{Recall} & \phantom{i} & \multicolumn{2}{c}{F1-score} & \phantom{i} & \multicolumn{2}{c}{F1-beta score} \\
+		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} \cmidrule{11-12} 
+		
+		&Mean &SD & &Mean &SD & &Mean &SD& &Mean & SD\\ \midrule
+		A2C &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
+		DQN &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
+		PPO &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
+		REINFORCE &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
+		
+		\bottomrule
+	\end{tabular}
+	\caption{Model performance comparison (with F-beta score). }
+\end{table*}
 
 xxx \par
 xxx \par
