--- a/Empirical_Study.tex
+++ b/Empirical_Study.tex
@@ -42,9 +42,10 @@ Our findings indicate that the REINFORCE performs significantly well for this pa
 
 
 \section{Method and Inference}
-
-\item why classifction metrics
-\item why F1beta
+\begin{itemize}
+	\item why classifction metrics
+	\item why F1beta
+\end{itemize}
 
 \subsection{Method - training and testing}
 
@@ -81,6 +82,8 @@ gradient approaches (Peters and Schaal, 2008c,b) have allowed for faster converg
 which may be advantageous for robotics as it reduces the learning time and required
 real-world interactions.
 
+\section{Results}
+\subsection{Detailed metrics}
 \newgeometry{margin=2cm} % Change margins for landscape table
 \begin{landscape}\centering
 	\begin{table*}
@@ -88,57 +91,39 @@ real-world interactions.
 		\rowspace{1.3}
 		\begin{tabular}{@{}l rrrr c rrrr c rrrr c rrrr@{}} \arrayrulecolor{black!40}\toprule
 			& \multicolumn{4}{c}{\textbf{REINFORCE}} & & \multicolumn{4}{c}{A2C} &
-			 & \multicolumn{4}{c}{DQN} & & \multicolumn{4}{c}{PPO} \\
+			& \multicolumn{4}{c}{DQN} & & \multicolumn{4}{c}{PPO} \\
 			\cmidrule{2-5} \cmidrule{7-10} \cmidrule{12-15} \cmidrule{17-20}
 			Environment &Prec. &Recall &F1 &F0.5 & &Prec. &Recall &F1 &F0.5 & &Prec. &Recall &F1 &F0.5 & &Prec. &Recall &F1 &F0.5\\ \midrule
 			
-			Simulated  - No noise &1.000 &0.630 &0.771 & 0.893 & & 0.000 &0.000 &0.000 &0.000 & &0.057 &0.045 &0.050 &0.054 & &0.489 &0.130 &0.199&0.301\\
-			Simulated  - Low noise &0.896 &0.955 &0.923 & 0.906 & & 0.532 &0.580 &0.553 &0.540 & &0.504 &0.990 &0.668 &0.559 & &0.275 &0.030 &0.053&0.099\\
-			Simulated  - High noise &0.889 &0.995 &0.939 & 0.908 & & 0.498 &0.545 &0.518 &0.505 & &0.503 &0.990 &0.667 &0.557 & &0.439 &0.140 &0.210&0.304\\ \midrule
+			Simulated  - No noise &0.999 &0.645 &0.782 & 0.898 & & 0.335 &0.359 &0.344 &0.338 & &0.348 &0.597 &0.410 &0.352 & &0.392 &0.211 &0.252&0.303\\
+			Simulated  - Low noise &0.943 &0.954 &0.948 & 0.945 & & 0.409 &0.318 &0.349 &0.379 & &0.273 &0.064 &0.076 &0.108 & &0.359 &0.173 &0.205&0.255\\
+			Simulated  - High noise &0.889 &0.974 &0.929 & 0.904 & & 0.471 &0.439 &0.443 &0.455 & &0.423 &0.408 &0.295 &0.284 & &0.402 &0.205 &0.248&0.307\\ \midrule
 			
-			PHM C01 SS - No noise &0.864 &0.995 &0.924 & 0.887 & & 0.526 &0.505 &0.515 &0.521 & &0.035 &0.030 &0.032 &0.034 & &0.213 &0.060 &0.093&0.140\\
-			PHM C01 SS - Low noise &0.922 &0.835 &0.870 & 0.898 & & 0.000 &0.000 &0.000 &0.000 & &0.300 &0.025 &0.045 &0.089 & &0.576 &0.495 &0.531&0.556\\
-			PHM C01 SS - High noise &0.791 &0.920 &0.849 & 0.813 & & 0.503 &0.535 &0.516 &0.507 & &0.300 &0.025 &0.046 &0.092 & &0.494 &0.450 &0.469&0.483\\ \hdashline
+			PHM C01 SS - No noise &0.886 &0.978 &0.928 & 0.902 & & 0.294 &0.337 &0.305 &0.296 & &0.350 &0.405 &0.291 &0.269 & &0.517 &0.494 &0.471&0.476\\
+			PHM C01 SS - Low noise &0.916 &0.893 &0.903 & 0.911 & & 0.526 &0.645 &0.568 &0.540 & &0.321 &0.591 &0.404 &0.343 & &0.490 &0.415 &0.443&0.468\\
+			PHM C01 SS - High noise &0.757 &0.926 &0.831 & 0.784 & & 0.499 &0.632 &0.542 &0.513 & &0.399 &0.402 &0.308 &0.292 & &0.403 &0.223 &0.270&0.325\\ \hdashline
+			
+			PHM C04 SS - No noise &0.865 &0.959 &0.908 & 0.881 & & 0.515 &0.676 &0.575 &0.535 & &0.365 &0.497 &0.383 &0.348 & &0.431 &0.239 &0.265&0.311\\
+			PHM C04 SS - Low noise &0.722 &0.980 &0.831 & 0.762 & & 0.399 &0.393 &0.391 &0.393 & &0.409 &0.589 &0.410 &0.361 & &0.438 &0.299 &0.334&0.377\\
+			PHM C04 SS - High noise &0.770 &0.809 &0.787 & 0.776 & & 0.375 &0.456 &0.397 &0.381 & &0.408 &0.411 &0.296 &0.282 & &0.491 &0.324 &0.362&0.409\\ \hdashline
+			
+			PHM C06 SS - No noise &0.996 &0.609 &0.751 & 0.879 & & 0.463 &0.454 &0.455 &0.459 & &0.538 &0.780 &0.585 &0.523 & &0.402 &0.410 &0.374&0.370\\
+			PHM C06 SS - Low noise &0.968 &0.854 &0.905 & 0.941 & & 0.508 &0.615 &0.548 &0.522 & &0.395 &0.593 &0.411 &0.362 & &0.454 &0.342 &0.367&0.404\\
+			PHM C06 SS - High noise &0.699 &0.912 &0.790 & 0.732 & & 0.480 &0.512 &0.466 &0.467 & &0.581 &0.499 &0.417 &0.433 & &0.424 &0.199 &0.252&0.314\\ \midrule
+			
+			PHM C01 MS - No noise &0.824 &0.895 &0.856 & 0.836 & & 0.444 &0.284 &0.315 &0.358 & &0.313 &0.215 &0.165 &0.175 & &0.513 &0.347 &0.395&0.448\\
+			PHM C04 MS - No noise &0.752 &0.678 &0.709 & 0.733 & & 0.506 &0.326 &0.368 &0.425 & &0.588 &0.642 &0.492 &0.486 & &0.472 &0.455 &0.444&0.452\\
+			PHM C06 MS - No noise &1.000 &0.643 &0.779 & 0.896 & & 0.499 &0.731 &0.575 &0.523 & &0.520 &0.239 &0.209 &0.256 & &0.509 &0.260 &0.330&0.409\\
 					
-			PHM C04 SS - No noise &0.831 &0.975 &0.896 & 0.855 & & 0.516 &0.525 &0.517 &0.515 & &0.300 &0.015 &0.029 &0.062 & &0.454 &0.125 &0.191&0.287\\
-			PHM C04 SS - Low noise &0.742 &1.000 &0.852 & 0.783 & & 0.506 &0.520 &0.510 &0.507 & &0.498 &0.960 &0.655 &0.551 & &0.302 &0.110 &0.160&0.221\\
-			PHM C04 SS - High noise &0.687 &0.780 &0.730 & 0.704 & & 0.485 &0.375 &0.421 &0.457 & &0.200 &0.020 &0.036 &0.068 & &0.507 &0.635 &0.562&0.527\\ \hdashline
-			
-			PHM C06 SS - No noise &1.000 &0.675 &0.803 & 0.910 & & 0.568 &0.680 &0.614 &0.584 & &0.501 &0.985 &0.664 &0.556 & &0.574 &0.420 &0.483&0.533\\
-			PHM C06 SS - Low noise &0.934 &0.755 &0.833 & 0.891 & & 0.479 &0.605 &0.533 &0.499 & &0.545 &0.975 &0.699 &0.597 & &0.405 &0.150 &0.213&0.291\\
-			PHM C06 SS - High noise &0.726 &0.950 &0.821 & 0.761 & & 0.425 &0.370 &0.391 &0.409 & &0.117 &0.015 &0.026 &0.049 & &0.548 &0.495 &0.518&0.535\\ \midrule
-			
-			PHM C01 MS - No noise &0.903 &0.950 &0.925 & 0.911 & & 0.533 &0.620 &0.572 &0.547 & &0.350 &0.025 &0.046 &0.095 & &0.473 &0.715 &0.569&0.507\\
-			PHM C04 MS - No noise &0.796 &0.615 &0.689 & 0.748 & & 0.513 &0.650 &0.572 &0.535 & &0.350 &0.020 &0.038 &0.080 & &0.489 &0.140 &0.215&0.319\\
-			PHM C06 MS - No noise &1.000 &0.670 &0.802 & 0.910 & & 0.506 &0.580 &0.538 &0.518 & &0.804 &0.260 &0.392 &0.565 & &0.522 &0.635 &0.571&0.540\\
-			
-\bottomrule
-\end{tabular}
-\caption{Model performance comparison. SB-3 algorithms trained for 10K episodes.}
-\label{tbl:AllEnvs}
-\end{table*}
+			\bottomrule
+		\end{tabular}
+		\caption{Model performance comparison all variants of the environments.}
+		\label{tbl:DetailedMetrics}
+	\end{table*}
 \end{landscape}
 \restoregeometry % Restore margins after landscape table
 
-
-\begin{table*}[hbt!]\centering
-	\rowspace{1.3}
-	\begin{tabular}{@{}l rr c rr c rr@{}}
-		\arrayrulecolor{black!40}\toprule
-		 & \multicolumn{2}{c}{Precision} & \phantom{i} & \multicolumn{2}{c}{Recall} & \phantom{i} & \multicolumn{2}{c}{F1-score} \\
-		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} 
-		%Model &Precision &Recall &F1 &  &Precision &Recall &F1 & &Precision &Recall &F1 & &Precision &Recall &F1\\ \midrule
-		
-		&Mean &SD & &Mean &SD & &Mean &SD \\ \midrule
-		A2C &0.429 &0.088 & &0.411 &0.085 & &0.403 &0.070 \\
-		DQN &0.529 &0.121 & &0.693 &0.035 & &0.521 &0.028 \\
-		PPO &0.477 &0.153 & &0.265 &0.090 & &0.320 &0.101 \\
-		REINFORCE &0.869 &0.039 & &0.848 &0.062 & &0.842 &0.045 \\
-		\bottomrule
-\end{tabular}
-\caption{Model performance: Averages across all environments in Table  \ref{tbl:AllEnvs}}
-\end{table*}
-
+\subsection{Overall summary performance}
 \begin{table*}[hbt!]\centering
 	\rowspace{1.3}
 	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
@@ -147,22 +132,93 @@ real-world interactions.
 		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} \cmidrule{11-12} 
 		
 		&Mean &SD & &Mean &SD & &Mean &SD& &Mean & SD\\ \midrule
-		A2C &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
-		DQN &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
-		PPO &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
-		REINFORCE &1.000 &2.000 &  &3.000 &4.000 & & 5.000 &6.000 & &7.000 &8.000 \\
-		
+		A2C & 0.448 & 0.074 & &0.478 & 0.084 & & 0.443 & 0.071 & &0.439 &0.069 \\
+		DQN & 0.415 & 0.196 & &0.462 & 0.033 & & 0.343 & 0.038 & &0.325 &0.063 \\
+		PPO & 0.447 & 0.147 & &0.306 & 0.090 & & 0.334 & 0.093 & &0.375 &0.107 \\
+		REINFORCE & 0.866 & 0.042 & &0.847 & 0.054 & & 0.842 & 0.043 & &0.852 &0.042 \\	
 		\bottomrule
 	\end{tabular}
-	\caption{Model performance comparison (with F-beta score). }
+	\caption{Model performance summary - averaged over all environment.}
+	\label{tbl:OverallSummary}
 \end{table*}
 
-xxx \par
-xxx \par
-xxx \par
-xxx \par
-xxx \par
+\subsection{Simulated environment}
+\begin{table*}[hbt!]\centering
+	\rowspace{1.3}
+	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
+		\arrayrulecolor{black!40}\toprule
+		& \multicolumn{2}{c}{Precision} & \phantom{i} & \multicolumn{2}{c}{Recall} & \phantom{i} & \multicolumn{2}{c}{F1-score} & \phantom{i} & \multicolumn{2}{c}{F1-beta score} \\
+		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} \cmidrule{11-12} 
+		
+		&Mean &SD & &Mean &SD & &Mean &SD& &Mean & SD\\ \midrule
+		A2C & 0.405 & 0.079 & &0.372 & 0.086 & & 0.379 & 0.076 & &0.391 &0.076 \\
+		DQN & 0.348 & 0.217 & &0.356 & 0.033 & & 0.260 & 0.041 & &0.248 &0.068 \\
+		PPO & 0.385 & 0.175 & &0.196 & 0.064 & & 0.235 & 0.080 & &0.289 &0.110 \\
+		REINFORCE & 0.944 & 0.029 & &0.858 & 0.041 & & 0.886 & 0.032 & &0.916 &0.030 \\
+		\bottomrule
+	\end{tabular}
+	\caption{Model performance summary - averaged over simulated environments.}
+	\label{tbl:SimulatedEnv}
+\end{table*}
 
+\newpage
+\subsection{Real data -- simple single-variable environment}
+\begin{table*}[h]\centering
+	\rowspace{1.3}
+	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
+		\arrayrulecolor{black!40}\toprule
+		& \multicolumn{2}{c}{Precision} & \phantom{i} & \multicolumn{2}{c}{Recall} & \phantom{i} & \multicolumn{2}{c}{F1-score} & \phantom{i} & \multicolumn{2}{c}{F1-beta score} \\
+		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} \cmidrule{11-12} 
+		
+		&Mean &SD & &Mean &SD & &Mean &SD& &Mean & SD\\ \midrule
+		A2C & 0.451 & 0.064 & &0.524 & 0.085 & & 0.472 & 0.067 & &0.456 &0.063 \\
+		DQN & 0.418 & 0.172 & &0.530 & 0.032 & & 0.389 & 0.034 & &0.357 &0.055 \\
+		PPO & 0.450 & 0.146 & &0.327 & 0.095 & & 0.349 & 0.095 & &0.384 &0.106 \\
+		REINFORCE & 0.842 & 0.043 & &0.880 & 0.053 & & 0.848 & 0.043 & &0.841 &0.042 \\
+		\bottomrule
+	\end{tabular}
+	\caption{Model performance summary - averaged over PHM-2010 environments with simple single-variable environment.}
+	\label{tbl:PHMSS}
+\end{table*}
+
+\subsection{Real data -- complex multi-variate environment}
+\begin{table*}[hbt!]\centering
+	\rowspace{1.3}
+	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
+		\arrayrulecolor{black!40}\toprule
+		& \multicolumn{2}{c}{Precision} & \phantom{i} & \multicolumn{2}{c}{Recall} & \phantom{i} & \multicolumn{2}{c}{F1-score} & \phantom{i} & \multicolumn{2}{c}{F1-beta score} \\
+		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} \cmidrule{11-12} 
+		
+		&Mean &SD & &Mean &SD & &Mean &SD& &Mean & SD\\ \midrule
+		A2C & 0.483 & 0.101 & &0.447 & 0.081 & & 0.419 & 0.075 & &0.435 &0.079 \\
+		DQN & 0.474 & 0.248 & &0.365 & 0.038 & & 0.289 & 0.049 & &0.306 &0.082 \\
+		PPO & 0.498 & 0.121 & &0.354 & 0.103 & & 0.390 & 0.101 & &0.436 &0.104 \\
+		REINFORCE & 0.859 & 0.053 & &0.739 & 0.069 & & 0.781 & 0.055 & &0.822 &0.052 \\
+		\bottomrule
+	\end{tabular}
+	\caption{Model performance summary - averaged over PHM-2010 environments with complex multi-variate environment.}
+	\label{tbl:PHMMS}
+\end{table*}
+
+
+%\begin{table*}[hbt!]\centering
+%	\rowspace{1.3}
+%	\begin{tabular}{@{}l rr c rr c rr@{}}
+%		\arrayrulecolor{black!40}\toprule
+%		& \multicolumn{2}{c}{Precision} & \phantom{i} & \multicolumn{2}{c}{Recall} & \phantom{i} & \multicolumn{2}{c}{F1-score} \\
+%		\cmidrule{2-3} \cmidrule{5-6} \cmidrule{8-9} 
+%		%Model &Precision &Recall &F1 &  &Precision &Recall &F1 & &Precision &Recall &F1 & &Precision &Recall &F1\\ \midrule
+%		
+%		&Mean &SD & &Mean &SD & &Mean &SD \\ \midrule
+%		A2C &0.429 &0.088 & &0.411 &0.085 & &0.403 &0.070 \\
+%		DQN &0.529 &0.121 & &0.693 &0.035 & &0.521 &0.028 \\
+%		PPO &0.477 &0.153 & &0.265 &0.090 & &0.320 &0.101 \\
+%		REINFORCE &0.869 &0.039 & &0.848 &0.062 & &0.842 &0.045 \\
+%		\bottomrule
+%	\end{tabular}
+%	\caption{Model performance: Averages across all environments in Table  \ref{tbl:AllEnvs}}
+%\end{table*}
+\newpage
 \subsection{Algorithm timelines}
 \begin{itemize}
 	\item 1947: Monte Carlo Sampling
