--- a/Empirical_Study.tex
+++ b/Empirical_Study.tex
@@ -1,6 +1,7 @@
 %% (2) Build options: PdfLaTex + BibTex
 
 \documentclass[]{article}
+\usepackage[T1]{fontenc}
 \usepackage[round]{natbib}
 \bibliographystyle{plainnat}
 
@@ -18,6 +19,9 @@
 \usepackage[colorlinks, allcolors=blue]{hyperref} 
 
 % Macros
+\newcolumntype{L}[1]{>{\raggedright\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{C}[1]{>{\centering\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
+\newcolumntype{R}[1]{>{\raggedleft\let\newline\\\arraybackslash\hspace{0pt}}m{#1}}
 \newcommand{\rowspace}[1]{\renewcommand{\arraystretch}{#1}}
 
 %opening
@@ -82,6 +86,67 @@ gradient approaches (Peters and Schaal, 2008c,b) have allowed for faster converg
 which may be advantageous for robotics as it reduces the learning time and required
 real-world interactions.
 
+	
+\section{Hyper-parmeters}
+
+\begin{table*}\centering
+	\sffamily
+	\rowspace{1.5}
+	\begin{tabular}{L{2cm} R{2.5cm} R{2.5cm} R{2.5cm} R{3cm}}
+		\arrayrulecolor{black!40}\toprule
+		&\textbf{A2C}&\textbf{DQN}&\textbf{PPO}&\textbf{REINFORCE}\\ \midrule
+		
+		Network\par architecture&input dim x\par [64|Tanh x 64|Tanh]\par x output dim&input dim x\par [64|Tanh x 64|Tanh]\par x output dim&input dim x\par [64|Tanh x 64|Tanh]\par x output dim&input dim x\par [64|ReLU]\par x output dim\\
+		Layers&2&2&2&1\\
+		Units&64  x 64&64  x 64&64  x 64&64\\
+		Activation&Tanh, Tanh&Tanh, Tanh&Tanh, Tanh&ReLU\\
+		Learning rate&0.0007&0.0001&0.0003&0.01\\
+		Gamma&0.99&0.99&0.99&0.99\\
+		Optimizer&RMSprop&Adam&Adam&Adam\\
+			
+		\bottomrule
+	\end{tabular}
+	\caption{Hyper-parameters of the RL algorithms}
+	\label{tbl:hyperparameters}
+\end{table*}
+
+
+
+soure of ppo implementation details \url{https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/}
+
+source of SB-3 network mp : \url{https://github.com/openai/baselines/blob/ea25b9e8b234e6ee1bca43083f8f3cf974143998/baselines/common/models.py#L75-L103}
+
+\subsection{PPO hyperparms}
+
+implementation guide source >> https://iclr-blog-track.github.io/2022/03/25/ppo-implementation-details/
+
+By default, PPO uses a simple MLP network consisting of two layers of 64 neurons and Hyperbolic Tangent as the activation function. Then PPO builds a policy head and value head that share the outputs of the MLP network. Below is a pseudocode:
+%\textt{
+%network = Sequential(
+%layer_init(Linear(np.array(envs.single_observation_space.shape).prod(), 64)),
+%Tanh(),
+%layer_init(Linear(64, 64)),
+%Tanh(),
+%)
+%value_head = layer_init(Linear(64, 1), std=1.0)
+%policy_head = layer_init(Linear(64, envs.single_action_space.n), std=0.01)
+%hidden = network(observation)
+%value = value_head(hidden)
+%action = Categorical(policy_head(hidden)).sample()}
+
+\subsection{dqn hyperparms}
+
+
+default hyperparms : \url{https://stable-baselines3.readthedocs.io/en/master/_modules/stable_baselines3/common/policies.html}
+
+overridden in indiv policies for example 
+SB3 DQN hypoerparms for example were taken from ;
+Paper: https://arxiv.org/abs/1312.5602, https://www.nature.com/articles/nature14236
+Default hyperparameters are taken from the Nature paper,
+except for the optimizer and learning rate that were taken from Stable Baselines defaults
+
+
+
 \section{Results}
 \subsection{Detailed metrics}
 \newgeometry{margin=2cm} % Change margins for landscape table
@@ -125,6 +190,7 @@ real-world interactions.
 
 \subsection{Overall summary performance}
 \begin{table*}[hbt!]\centering
+	\sffamily
 	\rowspace{1.3}
 	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
 		\arrayrulecolor{black!40}\toprule
@@ -143,7 +209,7 @@ real-world interactions.
 \end{table*}
 
 \subsection{Simulated environment}
-\begin{table*}[hbt!]\centering
+\begin{table*}[hbt!]\centering\sffamily
 	\rowspace{1.3}
 	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
 		\arrayrulecolor{black!40}\toprule
@@ -164,6 +230,7 @@ real-world interactions.
 \newpage
 \subsection{Real data -- simple single-variable environment}
 \begin{table*}[h]\centering
+	\sffamily
 	\rowspace{1.3}
 	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
 		\arrayrulecolor{black!40}\toprule
@@ -183,6 +250,7 @@ real-world interactions.
 
 \subsection{Real data -- complex multi-variate environment}
 \begin{table*}[hbt!]\centering
+	\sffamily
 	\rowspace{1.3}
 	\begin{tabular}{@{}l rr c rr c rr c rr@{}}
 		\arrayrulecolor{black!40}\toprule
@@ -199,6 +267,29 @@ real-world interactions.
 	\caption{Model performance summary - averaged over PHM-2010 environments with complex multi-variate environment.}
 	\label{tbl:PHMMS}
 \end{table*}
+
+
+\section{Stable Baseline algorithms - default architectures}
+
+\section{A2C - architecture}
+\textbf{Actor-Critic Policy}: Two fully interconnected layers of 64 units with tanh activation.
+\begin{itemize}
+	\item Policy network:
+	\begin{itemize}
+		\item Linear (input dimensions = 2, output dimensions = 64, bias=True)
+		\item Tanh()
+		\item Linear(input dimensions = 64, output dimensions = 64, bias=True)
+		\item Tanh()
+	\end{itemize}
+
+	\item Value network:
+	\begin{itemize}
+		\item Linear(input dimensions = 2, output dimensions = 64, bias=True)
+		\item Tanh()
+		\item Linear(input dimensions = 64, output dimensions = 64, bias=True)
+		\item Tanh()
+	\end{itemize}
+\end{itemize}
 
 
 %\begin{table*}[hbt!]\centering
