Article - table for training time added

--- a/ES_bibliography.bib
+++ b/ES_bibliography.bib
@@ -1,3 +1,12 @@
+@article{oshida2023,
+	title={Development and implementation of real-time anomaly detection on tool wear based on stacked LSTM encoder-decoder model},
+	author={Oshida, Taisuke and Murakoshi, Tomohiro and Zhou, Libo and Ojima, Hirotaka and Kaneko, Kazuki and Onuki, Teppei and Shimizu, Jun},
+	journal={The International Journal of Advanced Manufacturing Technology},
+	pages={1--16},
+	year={2023},
+	publisher={Springer}
+}
+
 @article{SB3,
 	author = {Raffin, Antonin and Hill, Ashley and Gleave, Adam and Kanervisto, Anssi and Ernestus, Maximilian and Dormann, Noah},
 	title = {Stable-Baselines3: Reliable Reinforcement Learning Implementations},
