Article - Started. Introduction section.

--- a/ES_bibliography.bib
+++ b/ES_bibliography.bib
@@ -1,4 +1,13 @@
-@article{oshida2023,
+@inproceedings{dai2021reinforcement,
+	title={Reinforcement lion swarm optimization algorithm for tool wear prediction},
+	author={Dai, Zixiang and Jiang, Mingyan and Li, Xiaogang and Yuan, Dongfeng and Zhou, Xiaotian},
+	booktitle={2021 Global Reliability and Prognostics and Health Management (PHM-Nanjing)},
+	pages={1--7},
+	year={2021},
+	organization={IEEE}
+}
+
+@article{oshida2023development,
 	title={Development and implementation of real-time anomaly detection on tool wear based on stacked LSTM encoder-decoder model},
 	author={Oshida, Taisuke and Murakoshi, Tomohiro and Zhou, Libo and Ojima, Hirotaka and Kaneko, Kazuki and Onuki, Teppei and Shimizu, Jun},
 	journal={The International Journal of Advanced Manufacturing Technology},
@@ -6,6 +15,17 @@
 	year={2023},
 	publisher={Springer}
 }
+
+@misc{milling-market,
+	author = {{Future Market Insights}},
+	year = {2023},
+	month = {1},
+	title = {Milling Machine Market Outlook (2023 to 2033)},
+	url = {https://www.futuremarketinsights.com/reports/milling-machine-market},
+	publisher = {Future Market Insights, Inc.},
+	note = {Accessed: 2023-06-23}
+}
+
 
 @article{SB3,
 	author = {Raffin, Antonin and Hill, Ashley and Gleave, Adam and Kanervisto, Anssi and Ernestus, Maximilian and Dormann, Noah},
