--- a/ES_bibliography.bib
+++ b/ES_bibliography.bib
@@ -1,3 +1,20 @@
+@data{NUAA-data-set,
+	doi = {10.21227/3aa1-5e83},
+	url = {https://dx.doi.org/10.21227/3aa1-5e83},
+	author = {Yingguang, LI and Changqing, LIU and Dehua, LI and Jiaqi, HUA and Peng, WAN},
+	publisher = {IEEE Dataport},
+	title = {Tool wear dataset of NUAA Ideahouse},
+	year = {2021}}
+
+@article{davsic2006analysis,
+	title={Analysis of Wear Cutting Tools by Complex Power-Exponential Function for Finishing Turning of the Hardened Steel 20crmo5 by Mixed Ceramic Tools},
+	author={Da{\v{s}}i{\'c}, Predrag},
+	journal={Fascicle VIII Tribology},
+	volume={12},
+	pages={54--60},
+	year={2006}
+}
+
 @inproceedings{dai2021reinforcement,
 	title={Reinforcement lion swarm optimization algorithm for tool wear prediction},
 	author={Dai, Zixiang and Jiang, Mingyan and Li, Xiaogang and Yuan, Dongfeng and Zhou, Xiaotian},
